--- a/templates/selection.html
+++ b/templates/selection.html
@@ -22,14 +22,12 @@
             </div>
         </div>
         
-        <!-- Schedule Info Container -->
+        <!-- Schedule Information Container -->
         <div id="schedule-info" class="schedule-info hidden">
             <div class="schedule-text">
                 <span class="schedule-label">Schedule Active:</span>
-                <a href="{{ url_for('schedule') }}" class="schedule-link" id="schedule-link">
-                    <span id="schedule-name"></span>
-                </a>
-                <span class="schedule-time" id="schedule-time"></span>
+                <span id="schedule-details"></span>
+                <a href="" id="schedule-edit-link" class="schedule-link">Edit Schedule</a>
             </div>
         </div>
     </div>
