--- a/templates/selection.html
+++ b/templates/selection.html
@@ -27,6 +27,9 @@
             <div class="schedule-text">
                 <span class="schedule-label">Schedule Active:</span>
                 <span id="schedule-details"></span>
+                <span class="schedule-status-container">
+                    | Status: <span id="schedule-status" class="schedule-status-btn">ACTIVE</span>
+                </span>
                 <a href="" id="schedule-edit-link" class="schedule-link">Edit Schedule</a>
             </div>
         </div>
