--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@
     --red: #c5554a;
     --blue: #4a90c5;
     --yellow: #c5a54a;
-    --green: #6b9b6b;
+    --green: #8B4513;
     --accent: #666666;
     --success: #555555;
     --error: #333333;
