--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -19,11 +19,11 @@
             <div class="scent-preview">
                 <div class="scent-option">
                     <div class="color-dot crimson"></div>
-                    <span>CRIMSON - Energetic & Bold</span>
+                    <span>FLORAL - Energetic & Bold</span>
                 </div>
                 <div class="scent-option">
                     <div class="color-dot azure"></div>
-                    <span>AZURE - Calm & Refreshing</span>
+                    <span>FRESH - Calm & Refreshing</span>
                 </div>
                 <div class="scent-option">
                     <div class="color-dot amber"></div>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="scent-option">
                     <div class="color-dot sage"></div>
-                    <span>SAGE - Fresh & Focused</span>
+                    <span>WOODY - Fresh & Focused</span>
                 </div>
             </div>
             <button id="start-quiz-btn" class="quiz-btn primary">Start Quiz</button>
