--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -97,10 +97,10 @@
                     <label for="formula">Formula</label>
                     <select id="formula" required>
                         <option value="">Select Formula</option>
-                        <option value="red">Crimson</option>
-                        <option value="blue">Azure</option>
+                        <option value="red">Floral</option>
+                        <option value="blue">Fresh</option>
                         <option value="yellow">Amber</option>
-                        <option value="green">Sage</option>
+                        <option value="green">Woody</option>
                     </select>
                 </div>
                 
