--- a/templates/selection.html
+++ b/templates/selection.html
@@ -50,10 +50,10 @@
         <!-- Main Formula Selection Circle -->
         <div class="radial">
             <button class="dot off" id="off-btn" data-color="off">OFF</button>
-            <button class="dot crimson" data-color="red">CRIMSON</button>
-            <button class="dot azure" data-color="blue">AZURE</button>
+            <button class="dot crimson" data-color="red">FLORAL</button>
+            <button class="dot azure" data-color="blue">FRESH</button>
             <button class="dot amber" data-color="yellow">AMBER</button>
-            <button class="dot sage" data-color="green">SAGE</button>
+            <button class="dot sage" data-color="green">WOODY</button>
         </div>
     </div>
     
